--- a/login.css
+++ b/login.css
@@ -29,7 +29,7 @@ input{
     width: 60%;
 }
 
-.input{
+.input{          
     background-color: #ededed;
     
     display: grid;
@@ -135,7 +135,7 @@ input::placeholder{
  /* --------------------sec 2----------------------------------------------- */
 
 #signup{
-    min-height: 100vh;
+    /* min-height: 100vh; */
     width: 45%;
     overflow: hidden;
     
@@ -202,3 +202,80 @@ input::placeholder{
 
 }
 
+
+
+@media screen and (max-width  : 700px) {
+
+    #wrapper{
+        flex-direction: column;
+        width: 100%;
+        /* align-items: center; */
+    }
+    #signup-wrapper{
+        
+    }
+    
+    #signup{
+        width: 100%;
+        
+        height: 120px;
+    }
+
+    #top-items{
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        /* justify-content: space-between; */
+    }
+
+    #top-items h1{
+        font-size: 20px !important;
+    }
+
+    #top-items h6{
+        /* font-size: 10px; */
+        display: none;
+    }
+
+    #top-items img{
+        display: none;
+    }
+
+    #signin{
+        width: 100%;
+        height: 100%;
+        margin-top: 2rem;
+    }
+
+    #login{
+        width: 90%;
+    }
+
+    #top-items button {
+        width: 130px;
+        height: 40px;
+        
+        font-size: 0.8rem;
+        font-weight: 500;
+        background: none;
+        border: 2px solid whitesmoke;
+        outline: none;
+        color: whitesmoke;
+        border-radius: 40px;
+        transition: 0.3s;
+    }
+
+    #login-btn {
+        width: 120px;
+        margin-top: 5%;
+        height: 50px;
+        border-radius: 50px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+        background-color: rgb(17, 0, 255);
+        color: white;
+        transition: .1s;}
+}
