--- a/pages/signup/signup.css
+++ b/pages/signup/signup.css
@@ -175,5 +175,72 @@ input::placeholder{
     color: whitesmoke;
 }
 
+@media screen and (max-width  : 700px) {
 
+    #wrapper{
+        flex-direction: column;
+        width: 100%;
+        /* align-items: center; */
+    }
+    #signup-wrapper{
+        
+    }
+    
+    #signup{
+        width: 100%;
+        
+        height: 120px;
+    }
+
+    #top-items{
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        /* justify-content: space-between; */
+    }
+
+    #top-items h1{
+        font-size: 20px !important;
+    }
+
+    #right{
+        /* font-size: 10px; */
+        display: none;
+    }
+
+    #top-items img{
+        display: none;
+    }
+
+    #signin{
+        width: 100%;
+        height: 100%;
+        margin-top: 2rem;
+    }
+
+    #login{
+        width: 90%;
+    }
+
+    #back-btn {
+        width: 40px;
+        height: 40px;
+        font-size: small; 
+       
+    }
+
+    #login-btn {
+        width: 120px;
+        margin-top: 5%;
+        height: 50px;
+        border-radius: 50px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+        background-color: rgb(17, 0, 255);
+        color: white;
+        transition: .1s;}
+}
 
